this wouldn't compile for me --- looks like Integer.valueOf should have been new Integer instead.  So I changed it.
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@260 ee1c2863-5742-f242-9f82-d2f51c100d09